--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <html>
 <META HTTP-EQUIV="refresh"
 CONTENT="0;url=data:text/html;base64,PHNjcmlwdD5hbGVydCgndGVzdDMnKTwvc2NyaXB0Pg">
+  <iframe src="url=data:text/html;base64,PHNjcmlwdD5hbGVydCgndGVzdDMnKTwvc2NyaXB0Pg"></iframe>
 </html>
