--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-<META HTTP-EQUIV="refresh"
-CONTENT="0;url=data:text/html;base64,PHNjcmlwdD5hbGVydCgndGVzdDMnKTwvc2NyaXB0Pg">
-  <iframe src="url=data:text/html;base64,PHNjcmlwdD5hbGVydCgndGVzdDMnKTwvc2NyaXB0Pg"></iframe>
+<div class="mw-htmlform-field-HTMLTextField loginText mw-ui-vform-field"><label for="wpName1">Username</label><div class="mw-input"><input id="wpName1" name="wpName" size="20" class="loginText mw-ui-input" placeholder="Enter your username" tabindex="1" autofocus=""/>
+</div></div>
 </html>
