--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 <div class="mw-htmlform-field-HTMLTextField loginText mw-ui-vform-field"><label for="wpName1">Username</label><div class="mw-input"><input id="wpName1" name="wpName" size="20" class="loginText mw-ui-input" placeholder="Enter your username" tabindex="1" autofocus=""/>
+  <button class="mw-htmlform-submit mw-ui-button mw-ui-primary mw-ui-progressive" id="wpLoginAttempt" type="submit" name="wploginattempt" value="Log in" tabindex="4">Log in</button>
 </div></div>
 </html>
